After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697377 - Cannot call static methods on interfaces
Cannot call static methods on interfaces
Status: RESOLVED FIXED
Product: seed
Classification: Bindings
Component: libseed
git master
Other Linux
: Normal normal
: ---
Assigned To: seed-maint
seed-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-05 16:53 UTC by Alban Crequy
Modified: 2013-07-04 12:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Support static methods on interfaces (2.90 KB, patch)
2013-04-05 16:58 UTC, Alban Crequy
none Details | Review

Description Alban Crequy 2013-04-05 16:53:04 UTC
Static methods on a GObject can be called on Namespace.Type.Function() but static methods on an interface cannot be called on Namespace.Interface.Function(). The support is missing in:
 libseed/seed-importer.c: seed_gi_importer_do_namespace()

The attached patch implements it.
Comment 1 Alban Crequy 2013-04-05 16:58:19 UTC
Created attachment 240772 [details] [review]
[PATCH] Support static methods on interfaces
Comment 2 Alan Knowles 2013-04-14 12:49:36 UTC
applied now
Comment 3 Travis Reitter 2013-06-28 15:59:24 UTC
Was this actually applied? I don't see it on git master.
Comment 4 Alan Knowles 2013-07-04 12:24:09 UTC
my mistake  - should be on there now.