Support static methods on interfaces

Static methods on a GObject can be called on Namespace.Type.Function() but
static methods on an interface cannot be called on
Namespace.Interface.Function().

https://bugzilla.gnome.org/show_bug.cgi?id=697377